--- a/NewsFeed/Views/Home/Index.cshtml
+++ b/NewsFeed/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Home Page";
 }
 
-@foreach(var item in Model.Feeds().Result)
+@foreach(var item in Model.Feeds())
 {
     <div class="item">
         <a href="@item.Link" target="_blank"><h2>@item.HeadLine</h2></a>
