--- a/NewsFeed/Views/Shared/_Layout.cshtml
+++ b/NewsFeed/Views/Shared/_Layout.cshtml
@@ -25,7 +25,8 @@
 
         </script>
     </head>
-    <body>
+    <body class="body">
+        <div id='header'>All Nepali online news in single place.</div>
         <div class="items">
             @RenderBody()
         </div>
