--- a/NewsFeed/Views/Shared/_Layout.cshtml
+++ b/NewsFeed/Views/Shared/_Layout.cshtml
@@ -25,8 +25,7 @@
 
         </script>
     </head>
-    <body class="body">
-        <div id='header'>All Nepali online news in single place.</div>
+    <body >
         <div class="items">
             @RenderBody()
         </div>
